--- a/community/sbw/SBW/SBW_2010.html
+++ b/community/sbw/SBW/SBW_2010.html
@@ -27,16 +27,16 @@ sitemap: community/sbw
     	</thead>
 		<body>
 			<tr><th colspan='2'>Public Breeder Coordination Session</th></tr>
-			<tr><td>Rich Wilson</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Wilson.pdf">Documenting Soybean Genomics Research</a></td></tr>
-			<tr><td>Roy Scott</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Scott.pdf">National Program Update</a></td></tr>
+			<tr><td>Rich Wilson</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Wilson.pdf">Documenting Soybean Genomics Research</a></td></tr>
+			<tr><td>Roy Scott</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Scott.pdf">National Program Update</a></td></tr>
 			<tr><td>Jim Orf, Univ. of Minnesota</td><td>Phytophtora</td></tr>
-			<tr><td>Katy Martin Rainey, Virginia Tech Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Rainey.pdf">Soybean Mosaic Virus</a></td></tr>
-			<tr><td>Brian Diers, Univ. of Illinois</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Diers.pdf">Asian Soybean Rust</a></td></tr>
-			<tr><td>Stella Kantartzi, Southern Illinois Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Kantartzi.pdf">Sudden Death Syndrome</a></td></tr>
-			<tr><td>David Lightfoot, Southern Illinois Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Lightfoot.pdf">Soybean Cyst Nematode</a></td></tr>
+			<tr><td>Katy Martin Rainey, Virginia Tech Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Rainey.pdf">Soybean Mosaic Virus</a></td></tr>
+			<tr><td>Brian Diers, Univ. of Illinois</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Diers.pdf">Asian Soybean Rust</a></td></tr>
+			<tr><td>Stella Kantartzi, Southern Illinois Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Kantartzi.pdf">Sudden Death Syndrome</a></td></tr>
+			<tr><td>David Lightfoot, Southern Illinois Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Lightfoot.pdf">Soybean Cyst Nematode</a></td></tr>
 			<tr><td>Paul Stephens, Pioneer Hi-Bred</td><td>Pioneer Optimum GAT Technology Update</td></tr>
-			<tr><td>Rick Leitz</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Leitz.pdf">Monsanto Technology Update</a></td></tr>
-			<tr><td>Wayne Parrot, Univ. of Georgia</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Parrot.pdf">USB Update: Center for Soybean Tissue Culture and Genetic Engineering</a></td></tr>
+			<tr><td>Rick Leitz</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Leitz.pdf">Monsanto Technology Update</a></td></tr>
+			<tr><td>Wayne Parrot, Univ. of Georgia</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Parrot.pdf">USB Update: Center for Soybean Tissue Culture and Genetic Engineering</a></td></tr>
 		</body>
 	</table>
 </div>
@@ -54,32 +54,32 @@ sitemap: community/sbw
     	</thead>
 		<body>
 			<tr><th colspan='2'>Nematodes | Chair: Prakash Arelli, USDA-ARS, Jackson, TN</tr></th>
-			<tr><td>Brian Diers, Univ. of Illinois</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Diers_2.pdf">Breeding soybean for nematode resistance in the Midwest</a></td></tr>
-			<tr><td>Grover Shannon, Univ. of Missouri</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Shannon.pdf">Soybean breeding for SCN resistance in the Midsouth</a></td></tr>
-			<tr><td>Bo-Keun Ha, Univ. of Georgia</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Ha.pdf">Breeding soybean for resistance to root-knot nematode</a></td></tr>
-			<tr><td>Don Hershman, Univ. of Kentucky</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Hershman.pdf">Hindrances to effective cyst nematode extension programming</a></td></tr>
-			<tr><td>Istvan Rajcan, Univ. of Guelph</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Rajcan.pdf">Recent mapping efforts for SCN resistance in G. max and G. soja</a></td></tr>
-			<tr><td>Prakash Arelli, USDA-ARS, TN</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Arelli.pdf">diverse sources of resistance to SCN in soybean</a></td></tr>
+			<tr><td>Brian Diers, Univ. of Illinois</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Diers_2.pdf">Breeding soybean for nematode resistance in the Midwest</a></td></tr>
+			<tr><td>Grover Shannon, Univ. of Missouri</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Shannon.pdf">Soybean breeding for SCN resistance in the Midsouth</a></td></tr>
+			<tr><td>Bo-Keun Ha, Univ. of Georgia</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Ha.pdf">Breeding soybean for resistance to root-knot nematode</a></td></tr>
+			<tr><td>Don Hershman, Univ. of Kentucky</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Hershman.pdf">Hindrances to effective cyst nematode extension programming</a></td></tr>
+			<tr><td>Istvan Rajcan, Univ. of Guelph</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Rajcan.pdf">Recent mapping efforts for SCN resistance in G. max and G. soja</a></td></tr>
+			<tr><td>Prakash Arelli, USDA-ARS, TN</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Arelli.pdf">diverse sources of resistance to SCN in soybean</a></td></tr>
 			<tr><th colspan='2'>Frogeye Leaf Spot and SMV | Chair: Jason Bond, Southern Illinois University</tr></th>
-			<tr><td>Melvin Newman, Univ. of Tennessee</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Newman.pdf">Soybean cultivar reaction to frogeye leaf spot</a></td></tr>
-			<tr><td>Rouf Mian, USDA-ARS, OH</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Mian.pdf">Genetic resistance of soybean to frogeye leaf spot, mapping of Rcs3, and breeding for resistance</a></td></tr>
-			<tr><td>Jason Bond, So. Illinois Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Bond.pdf">Identifying resistance to frogeye leaf spot in plant introductions</a></td></tr>
+			<tr><td>Melvin Newman, Univ. of Tennessee</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Newman.pdf">Soybean cultivar reaction to frogeye leaf spot</a></td></tr>
+			<tr><td>Rouf Mian, USDA-ARS, OH</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Mian.pdf">Genetic resistance of soybean to frogeye leaf spot, mapping of Rcs3, and breeding for resistance</a></td></tr>
+			<tr><td>Jason Bond, So. Illinois Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Bond.pdf">Identifying resistance to frogeye leaf spot in plant introductions</a></td></tr>
 			<tr><td>Saghai Maroof, Virginia Tech Univ.</td><td>Soybean mosaic virus resistance genes and their interactions</td></tr>
 			<tr><th colspan='2'>Charcoal Rot | Chair: Alemu Mengistu, USDA-ARS, Jackson, TN</tr></th>
-			<tr><td>Allen Wrather, Univ. of Missouri</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Wrather.pdf">Impact of charcoal rot and other diseases on world soybean supply</a></td></tr>
-			<tr><td>Alemu Mengistu, USDA-ARS, TN</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Mengistu.pdf">Screening and identifying soybean lines for resistance to charcoal rot in a field environment</a></td></tr>
-			<tr><td>Glen Hartman, USDA-ARS, IL</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Hartman.pdf">Screening and identifying soybean lines for resistance in non-field environments</a></td></tr>
-			<tr><td>Rusty Smith, USDA-ARS, MS</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Smith.pdf">Studies in genetics and breeding for resistance to charcoal rot in soybean</a></td></tr>
-			<tr><td>John Rupe, Univ. of Arkansas</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Rupe.pdf">Multi-environment testing for charcoal rot resistance: a regional approach</a></td></tr>
-			<tr><td>Ahmad Fakhoury, Purdue Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Fakhoury.pdf">Phasiolinone as a new tool to evaluate resistance to charcoal rot</a></td></tr>
+			<tr><td>Allen Wrather, Univ. of Missouri</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Wrather.pdf">Impact of charcoal rot and other diseases on world soybean supply</a></td></tr>
+			<tr><td>Alemu Mengistu, USDA-ARS, TN</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Mengistu.pdf">Screening and identifying soybean lines for resistance to charcoal rot in a field environment</a></td></tr>
+			<tr><td>Glen Hartman, USDA-ARS, IL</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Hartman.pdf">Screening and identifying soybean lines for resistance in non-field environments</a></td></tr>
+			<tr><td>Rusty Smith, USDA-ARS, MS</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Smith.pdf">Studies in genetics and breeding for resistance to charcoal rot in soybean</a></td></tr>
+			<tr><td>John Rupe, Univ. of Arkansas</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Rupe.pdf">Multi-environment testing for charcoal rot resistance: a regional approach</a></td></tr>
+			<tr><td>Ahmad Fakhoury, Purdue Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Fakhoury.pdf">Phasiolinone as a new tool to evaluate resistance to charcoal rot</a></td></tr>
 			<tr><th colspan='2'>Sudden Death Syndrome Chairs:  Jason Bond, SIU and Brian Diers, Univ. of IL</tr></th>
-			<tr><td>Leonor Leandro, Iowa State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Leandro.pdf">Epidemiological studies on the timing of inoculation and development of sudden death syndrome in soybean</a></td></tr>
-			<tr><td>Ahmad Fakhoury, Purdue Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Fakhoury_2.pdf">Identifying fungal factors affecting Fusarium virguliforme aggressiveness and SDS development</a></td></tr>
-			<tr><td>Silvia Cianzio, Iowa State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Cianzio.pdf">Breeding efforts for SDS resistance</a></td></tr>
-			<tr><td>Madan Bhattacharyya, Iowa State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Bhattacharyya.pdf">How does the fungal pathogen, Fusarium virguliforme cause SDS?</a></td></tr>
-			<tr><td>David Lightfoot, So. Illinois Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Lightfoot_2.pdf">Transgenics, QTL stacks and NIL verifications for SDS</a></td></tr>
+			<tr><td>Leonor Leandro, Iowa State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Leandro.pdf">Epidemiological studies on the timing of inoculation and development of sudden death syndrome in soybean</a></td></tr>
+			<tr><td>Ahmad Fakhoury, Purdue Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Fakhoury_2.pdf">Identifying fungal factors affecting Fusarium virguliforme aggressiveness and SDS development</a></td></tr>
+			<tr><td>Silvia Cianzio, Iowa State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Cianzio.pdf">Breeding efforts for SDS resistance</a></td></tr>
+			<tr><td>Madan Bhattacharyya, Iowa State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Bhattacharyya.pdf">How does the fungal pathogen, Fusarium virguliforme cause SDS?</a></td></tr>
+			<tr><td>David Lightfoot, So. Illinois Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Lightfoot_2.pdf">Transgenics, QTL stacks and NIL verifications for SDS</a></td></tr>
 			<tr><th colspan='2'>Other Soybean Diseases | Chairs: Jason Bond, SIU and Brian Diers, Univ. of IL</tr></th>
-			<tr><td>Anne Dorrance, Ohio State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Dorrance.pdf">Resistance to Phytophthora sojae: current status and challenges</a></td></tr>
+			<tr><td>Anne Dorrance, Ohio State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Dorrance.pdf">Resistance to Phytophthora sojae: current status and challenges</a></td></tr>
 		</body>
 	</table>
 </div>
@@ -96,10 +96,10 @@ sitemap: community/sbw
 		<body>			
 			<tr><th colspan='2'>Public Breeder Coordination Session</tr></th>
 			<tr><td>Vince Pantalone, Univ. of Tennessee</td><td>Soybean Germplasm Committee Report</td></tr>
-			<tr><td>David Walker, USDA-ARS, IL</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Walker_2.pdf">Soybean Genetics Committee Report</a></td></tr>
-			<tr><td>David Walker, USDA-ARS, IL</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Walker.pdf">Progress in Developing Soybean Resistant to Soybean Rust</a></td></tr>
-			<tr><td>Jim Specht, Univ. of Nebraska and Perry Cregan, USDA-ARS, MD</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Specht.pdf">Selective Genotyping and Association Mapping for Protein/Oil QTLs</a></td></tr>
-			<tr><td>David Grant, USDA-ARS, IA</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Grant.pdf">SoyBase &amp; the Soybean Breeders Toolbox</a></td></tr>
+			<tr><td>David Walker, USDA-ARS, IL</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Walker_2.pdf">Soybean Genetics Committee Report</a></td></tr>
+			<tr><td>David Walker, USDA-ARS, IL</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Walker.pdf">Progress in Developing Soybean Resistant to Soybean Rust</a></td></tr>
+			<tr><td>Jim Specht, Univ. of Nebraska and Perry Cregan, USDA-ARS, MD</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Specht.pdf">Selective Genotyping and Association Mapping for Protein/Oil QTLs</a></td></tr>
+			<tr><td>David Grant, USDA-ARS, IA</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2010/Grant.pdf">SoyBase &amp; the Soybean Breeders Toolbox</a></td></tr>
 		</body>
 	</table>
 </div>			
