--- a/community/sbw/SBW/SBW_2012.html
+++ b/community/sbw/SBW/SBW_2012.html
@@ -25,13 +25,13 @@ sitemap: community/sbw
         	</tr>
     	</thead>
 		<body>
-			<tr><td>Henry Nguyen, Univ. Missouri</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Nguyen.pdf">Large-scale Genome Re-sequencing</a></td></tr>
-			<tr><td>Peter Morrell, Univ. Minnesota</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Morrell.pdf">Nextgen Pops, Genetic Load, and Other Advances and Applications in Crop Genomics</a></td></tr>
+			<tr><td>Henry Nguyen, Univ. Missouri</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Nguyen.pdf">Large-scale Genome Re-sequencing</a></td></tr>
+			<tr><td>Peter Morrell, Univ. Minnesota</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Morrell.pdf">Nextgen Pops, Genetic Load, and Other Advances and Applications in Crop Genomics</a></td></tr>
 			<tr><td>Scott Sebastian, Pioneer Hi-Bred</td><td>Context Specific MAS</td></tr>
-			<tr><td>Matt O'Neal, IA State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/ONeal.pdf">Insect Pollinators in Soybeans</a></td></tr>
-			<tr><td>Maria Ortega &amp; Wayne Parrott, Univ. Georgia</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Ortega.pdf">De-bugging Soybean: A Story of Nano-spears and QTLs</a></td></tr>
+			<tr><td>Matt O'Neal, IA State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/ONeal.pdf">Insect Pollinators in Soybeans</a></td></tr>
+			<tr><td>Maria Ortega &amp; Wayne Parrott, Univ. Georgia</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Ortega.pdf">De-bugging Soybean: A Story of Nano-spears and QTLs</a></td></tr>
 			<tr><td>M.A. Saghai Maroof, Virginia Tech</td><td>Overview of $9.2 million AFRI Phytophthora Project</td></tr>
-			<tr><td>Rich Joost, Production Research Pgm. Director, USB/SmithBucklin</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Joost.pdf">Future Directions for United Soybean Board Breeding Funding</a></td></tr>
+			<tr><td>Rich Joost, Production Research Pgm. Director, USB/SmithBucklin</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Joost.pdf">Future Directions for United Soybean Board Breeding Funding</a></td></tr>
 		</body>
 	</table>
 </div>
@@ -47,20 +47,20 @@ sitemap: community/sbw
     	</thead>
 		<body>
 			<tr><th colspan='2'>Session: Stick Bug | Chair: Ames Herbert, Virginia Tech </th></tr>
-			<tr><td>Galen dively, Univ. Maryland</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Dively.pdf">Mid-Atlantic: Brown Marmorated Stink Bug</a></td></tr>
-			<tr><td>Ames Herbert, Virginia Tech</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Herbert.pdf">Mid-Atlantic: Brown Marmorated Stink Bug</a></td></tr>
-			<tr><td>Jeff Davis, LA State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Davis.pdf">Deep South: Redshouldered/redbanded Stink Bugs</a></td></tr>
+			<tr><td>Galen dively, Univ. Maryland</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Dively.pdf">Mid-Atlantic: Brown Marmorated Stink Bug</a></td></tr>
+			<tr><td>Ames Herbert, Virginia Tech</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Herbert.pdf">Mid-Atlantic: Brown Marmorated Stink Bug</a></td></tr>
+			<tr><td>Jeff Davis, LA State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Davis.pdf">Deep South: Redshouldered/redbanded Stink Bugs</a></td></tr>
 			<tr><th colspan='2'>Sesion: Kudzu Bug | Chair: Ames Herbert, Virginia Tech</th></tr>
-			<tr><td>Phillip Roberts, Univ. Georgia</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Roberts.pdf">Southeast: Kudzu Bug</a><br><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/VID_20110930_143901.m4v">Video 1</a><br><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/VID_20110930_143943.m4v">Video 2</a></td></tr>
-			<tr><td>Jeremy Greene, Clemson Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Greene.pdf">Southeast: Kudzu Bug</a></td></tr>
-			<tr><td>Andrea Cardinal, North Carolina State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Cardinal.pdf">Stink Bugs White Paper</a></td></tr>
+			<tr><td>Phillip Roberts, Univ. Georgia</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Roberts.pdf">Southeast: Kudzu Bug</a><br><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/VID_20110930_143901.m4v">Video 1</a><br><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/VID_20110930_143943.m4v">Video 2</a></td></tr>
+			<tr><td>Jeremy Greene, Clemson Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Greene.pdf">Southeast: Kudzu Bug</a></td></tr>
+			<tr><td>Andrea Cardinal, North Carolina State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Cardinal.pdf">Stink Bugs White Paper</a></td></tr>
 			<tr><th colspan='2'>Sesion: Aphids | Chair: Dechun Wang, Michigan State Univ.</th></tr>
-			<tr><td>Susannah Cooper, Monsanto Co.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Cooper.pdf">Soybean Aphid Biotypes: Understanding Geographic Distribution (2008-2010)</a></td></tr>
-			<tr><td>Matt O'Neal, IA State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/ONeal2.pdf">Is One Enough?: Combining Rag Genes Improves Aphid Resistance in Soybeans</a></td></tr>
-			<tr><td>Brian Diers, Univ. Illinois at Urbana-Champaign</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Diers.pdf">Fine Mapping Rag1 and Rag2 and the Evaluation of New Aphid Resistance Sources</a></td></tr>
-			<tr><td>Dechun Wang, Michigan State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Wang.pdf">Fine Mapping Rag3 and Rag4 Aphid Resistance Genes</a></td></tr>
-			<tr><td>Rouf Mian, USDA-ARS, Ohio State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Mian.pdf">Mapping and Characterization of a New Soybean Aphid Resistant Gene in PI 567301B</a></td></tr>
-			<tr><td>Andy Michel, Ohio State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Michel.pdf">Molecular Interactions Between Soybean Aphid and Resistant Soybean</a></td></tr>
+			<tr><td>Susannah Cooper, Monsanto Co.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Cooper.pdf">Soybean Aphid Biotypes: Understanding Geographic Distribution (2008-2010)</a></td></tr>
+			<tr><td>Matt O'Neal, IA State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/ONeal2.pdf">Is One Enough?: Combining Rag Genes Improves Aphid Resistance in Soybeans</a></td></tr>
+			<tr><td>Brian Diers, Univ. Illinois at Urbana-Champaign</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Diers.pdf">Fine Mapping Rag1 and Rag2 and the Evaluation of New Aphid Resistance Sources</a></td></tr>
+			<tr><td>Dechun Wang, Michigan State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Wang.pdf">Fine Mapping Rag3 and Rag4 Aphid Resistance Genes</a></td></tr>
+			<tr><td>Rouf Mian, USDA-ARS, Ohio State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Mian.pdf">Mapping and Characterization of a New Soybean Aphid Resistant Gene in PI 567301B</a></td></tr>
+			<tr><td>Andy Michel, Ohio State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Michel.pdf">Molecular Interactions Between Soybean Aphid and Resistant Soybean</a></td></tr>
 		</body>
 	</table>
 </div>			
@@ -77,13 +77,13 @@ sitemap: community/sbw
     	</thead>
 		<body>
 			<tr><th colspan='2'>Session: Public Breeder Coordination Session</th></tr>
-			<tr><td>Perry Cregan, USDA-ARS, Beltsville</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Cregan.pdf">Update on SNP Genotyping of the USDA Soybean Germplasm Collection</a></td></tr>
-			<tr><td>George Graef, Univ. Nebraska</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Graef.pdf">Soybean Genomics Strategic Plan: Accomplishments and Updates</a></td></tr>
-			<tr><td>Tommy Carter, USDA-ARS, Raleigh</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Carter.pdf">ARS Update (Including Status of Analytical Services)</a></td></tr>
+			<tr><td>Perry Cregan, USDA-ARS, Beltsville</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Cregan.pdf">Update on SNP Genotyping of the USDA Soybean Germplasm Collection</a></td></tr>
+			<tr><td>George Graef, Univ. Nebraska</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Graef.pdf">Soybean Genomics Strategic Plan: Accomplishments and Updates</a></td></tr>
+			<tr><td>Tommy Carter, USDA-ARS, Raleigh</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Carter.pdf">ARS Update (Including Status of Analytical Services)</a></td></tr>
 			<tr><td>Jeff Thompson, Pioneer Hi-Bred</td><td>Soybean Germplasm Committee Report</td></tr>
 			<tr><td>Istvan Rajcan, Univ. Guelph</td><td>Soybean Genetics Committee Report</td></tr>
-			<tr><td>David Grant, USDA-ARS, Ames</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Grant.pdf">SoyBase Update &amp; Tutorials</a></td></tr>
-			<tr><td>Group Discussion from the Floor to David Grant</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Grant2.pdf">Resequencing Data</a><br>
+			<tr><td>David Grant, USDA-ARS, Ames</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Grant.pdf">SoyBase Update &amp; Tutorials</a></td></tr>
+			<tr><td>Group Discussion from the Floor to David Grant</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Grant2.pdf">Resequencing Data</a><br>
 			How will soybean breeders use resequencing data?</br>
 				What tools are needed to enable this?
 			</td></tr>
