--- a/community/sbw/SBW/SBW_2013.html
+++ b/community/sbw/SBW/SBW_2013.html
@@ -30,10 +30,6 @@ sitemap: community/sbw
 
 
 <h3 >Tuesday, February 12, 2013</h3>
-<!-- General Session<br>
-<p class="uk-margin-left uk-margin-remove-vertical">Chair, Public Breeder: Andrew Scaboo, Univ. Missouri</p>
-<p class="uk-margin-left uk-margin-remove-vertical">Co-Chair, Public Pathologist:  Kiersten Wise, Purdue Univ.</p>
--->
 <div class="uk-overflow-auto">
 	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
     	<thead>
@@ -78,7 +74,7 @@ sitemap: community/sbw
         	</tr>
     	</thead>
 		<body>
-            <tr><td>Ben Fallen, Univ. Tennessee</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2013/presentations/13SBW_Wed_Fallen.pdf">Selective Genotyping For MAS Strategies For Soybean Yield Improvement</a></td></tr>
+            <tr><td>Ben Fallen, Univ. Tennessee</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2013/presentations/13SBW_Wed_Fallen.pdf">Selective Genotyping For MAS Strategies For Soybean Yield Improvement</a></td></tr>
             <tr><td colspan='2'>From The Floor: Retirements & Announcements</td></tr>
             <tr><td>Committee Member</td><td>Soybean Germplasm Committee Report</td></tr>
             <tr><td>Committee Member</td><td>Soybean Genetics Committee Report</td></tr>
