--- a/community/sbw/SBW/SBW_2014.html
+++ b/community/sbw/SBW/SBW_2014.html
@@ -10,10 +10,10 @@ sitemap: community/sbw
 <div>
 <h4>Workshop Coordinators:</h4>
     <p>
-        <strong>Katy Martin Rainey</strong> (Public Breeder), Purdue Univ. - Overall planning and coordination<br /> 
-        <strong>Hari Ramasubramaniam</strong> (Plant Pathologist), Syngenta Seeds Inc. - Hotel arrangements<br />
-        <strong>Danny Singh</strong> (Public Breeder), Iowa State Univ. - Program Chair, Tuesday General Session<br />
-        <strong>Seth Naeve</strong> (Public Agronomist/Physiologist), Univ. Minnesota, Co-Chair, Tuesday General Session
+        <strong>Katy Martin Rainey</strong> (Chair), Purdue Univ.;
+        <strong>Hari Ramasubramaniam</strong>, Syngenta Seeds Inc.;
+        <strong>Danny Singh</strong>, Iowa State Univ.;
+        <strong>Seth Naeve</strong>, Univ. Minnesota
     </p>
 </div>
 
@@ -98,7 +98,7 @@ sitemap: community/sbw
             <tr><td colspan='2'>From the Floor: Retirements &amp; Announcements</td></tr>
             <tr><td>Gary Stacey, Univ. Missouri</td><td>Novel germplasm resources for soybean breeding and genetics</td></tr>
             <tr><td>Perry Cregan, USDA-ARS</td><td>Status of the 50K SNP genotyping of germplasm collection</td></tr>
-            <tr><td>David Grant, USDA-ARS</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Grant_SBW2014.pdf'>SoyBase Update</a></td></tr>        
+            <tr><td>David Grant, USDA-ARS</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Grant_SBW2014.pdf'>SoyBase Update</a></td></tr>        
             <tr><td>Committee Member</td><td>Soybean Germplasm Committee Report</td></tr>
             <tr><td>David Wooten</td><td>Soybean Genetics Committee Report</td></tr>
             <tr><td>Kristin Bilyeu, USDA-ARS</td><td>SoyGEC report</td></tr>
