--- a/community/sbw/SBW/SBW_2016.html
+++ b/community/sbw/SBW/SBW_2016.html
@@ -135,7 +135,7 @@ sitemap: community/sbw
 			<tr><td>Jennifer Jones</td><td>Soybean Genomics Executive Committee</td></tr>
 			<tr><td>Troy Cary</td><td>Technicians Workshop</td></tr>
 			<tr><td>Chris Tinius</td><td>Commercial Soybean Breeders' Business Meeting</td></tr>
-			<tr><td>Andrew Scaboo</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Soybean_Genetics_Committee.pdf">Soybean Genetics Committee</td></tr>
+			<tr><td>Andrew Scaboo</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Soybean_Genetics_Committee.pdf">Soybean Genetics Committee</td></tr>
 			<tr><td>Kelly Whiting and Cate Newberg</td><td>Soybean Research Database Orientation</td></tr>
 			<tr><td>George Graef</td><td>Quality Traits</td></tr>
 		</body>
