--- a/community/sbw/SBW/SBW_2017.html
+++ b/community/sbw/SBW/SBW_2017.html
@@ -96,7 +96,7 @@ sitemap: community/sbw
             <tr><td>Andrew Scaboo, Univ. of Missouri<br />Evelyn Ortiz Perez, Dow AgroSciences</td><td>Announcements & Poster Winners Announced</td></tr>
             <tr><td>Zenglu Li, Univ. of Georgia</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Soybean_Germplasm_Committee_Report-Zenglu_Li.pdf'>Germplasm Committee Report</a></td></tr>
             <tr><td>Michelle Graham, USDA-ARS</td><td>SoyGEC Report</td></tr>
-            <tr><td>David Grant, USDA-ARS </td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyGenetComm_SBW_2017.pdf'>Soybean Genetics Committee Report</a> and <a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyBase_update_SBW_2017.pdf'>SoyBase.org update</a></td></tr>
+            <tr><td>David Grant, USDA-ARS </td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyGenetComm_SBW_2017.pdf'>Soybean Genetics Committee Report</a> and <a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyBase_update_SBW_2017.pdf'>SoyBase.org update</a></td></tr>
             <tr><td>From the Floor</td><td>Retirements and Announcements</td></tr>
             <tr><td>Siddhi Bhusal, Univ. of Minnesota</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SBW_SJBhusal.pdf'>Evaluation and identification of soybean aphid resistance sources and mapping of soybean aphid resistance loci in early maturing soybean germplasm</a></td></tr>
             <tr><td>Brian Diers, Univ. of Illinois</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Protein_talk_2017_SBW.pdf'>Protein and oil QTL and their associated impact on agronomic traits</a></td></tr>
@@ -207,17 +207,17 @@ sitemap: community/sbw
         </thead>
         <body>
             <tr><td>Kelly Whiting, USB staff</td><td>Welcome & Introduction to Session</td></tr>
-            <tr><td>Rich Joost, USB staff</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Joost_VTF_Objectives_pre.pdf'>USB Value Task Force Objectives</a></td></tr>
-            <tr><td>Gordon Denny, Gordon Denny LLC</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Seed_St_Louis_Feb162017_G_Denny.pdf'>Feedback from processors: specs., nutrient density, test weight </a></td></tr>
+            <tr><td>Rich Joost, USB staff</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Joost_VTF_Objectives_pre.pdf'>USB Value Task Force Objectives</a></td></tr>
+            <tr><td>Gordon Denny, Gordon Denny LLC</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Seed_St_Louis_Feb162017_G_Denny.pdf'>Feedback from processors: specs., nutrient density, test weight </a></td></tr>
             <tr><td>Reid Rice, DuPont-Pioneer</td><td>USB project with DuPont Pioneer to increase protein content, and high oleic update</td></tr>
             <tr><td>Lanny Ashlock, Natural Soy and Grain Alliance, Arkansas</td><td>Marketing high protein varieties: the Arkansas model</td></tr>
             <tr><td colspan='2'>Future of soybean variety development including quality traits at Bayer Crop Science</td></tr>
             <tr><td colspan='2'>Break</td></tr>
-            <tr><td>Doug Allen, USDA-ARS, Danforth Plant Science Center, St Louis</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Breeders_Workshop_2017b.pdf'>Feasibility of drawing carbon for additional protein and oil in soybean seed from soluble or insoluble (fiber) carbohydrates</a></td></tr>
+            <tr><td>Doug Allen, USDA-ARS, Danforth Plant Science Center, St Louis</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Breeders_Workshop_2017b.pdf'>Feasibility of drawing carbon for additional protein and oil in soybean seed from soluble or insoluble (fiber) carbohydrates</a></td></tr>
             <tr><td>John Schillinger, of Schillinger Genetics Inc.</td><td>Development of high oleic soybean varieties at Schillinger Genetics</td></tr>
             <tr><td>Katy Rainey, Purdue University</td><td>Genetic sources of increased sugar content in soybean</td></tr>
-            <tr><td>Vince Pantalone, University of Tennessee</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Pantalone_2017_Amino_Acid_Genetic_Variation.pdf'>Genetic variation and quantification of amino acids in soybean seed</a></td></tr>
-            <tr><td>Nick Bajjalieh, Integrative Nutrition Inc., Decatur IL</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Bajjalieh_2.16.2017.pdf'>Capturing value of key amino acids of soybean</a></td></tr>
+            <tr><td>Vince Pantalone, University of Tennessee</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Pantalone_2017_Amino_Acid_Genetic_Variation.pdf'>Genetic variation and quantification of amino acids in soybean seed</a></td></tr>
+            <tr><td>Nick Bajjalieh, Integrative Nutrition Inc., Decatur IL</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Bajjalieh_2.16.2017.pdf'>Capturing value of key amino acids of soybean</a></td></tr>
             <tr><td>Kelly Whiting, USB staff</td><td>Wrap-up</td></tr>
         </body>
     </table>
